Backand Storage File Upload

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
     <li class="nav-item">
       <a class="nav-link" routerLink="/crud" routerLinkActive="active">CRUD</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/files" routerLinkActive="active">Files</a>
+    </li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
