--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -71,6 +71,6 @@
         </div>
     </li>
     <li class="list-group-item">
-        <button type="button" class="btn btn-primary" (click)="signUp()">Sign Up</button>
+        <button type="button" class="btn btn-primary" (click)="changePassword()">Change Password</button>
     </li>
 </ul>
